# fifteen-puzzle

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  README.txt
evaluation/: CMakeLists.txt  README.txt
evaluation/scripts/: run_parallel.sh
evaluation/src/: Board.cpp  Board.h  Config.h  Utils.cpp  Utils.h  main.cpp
evaluation/src/StateSpaceSearch/: Benchmark.cpp  Benchmark.h  Dataset.cpp  Dataset.h  Node.cpp  Node.h
neural/: environment.yml
neural/notebooks/: TorchTraining.ipynb  TorchTrainingMinimal.ipynb  Training.ipynb
prototype/: .gitignore  README.txt  environment-cpu.yml  environment-gpu.yml  environment.yml
prototype/fifteenproto/: board.py  utils.py
prototype/notebooks/: ANNComparison.ipynb  ANNHeuristicBenchmark.ipynb  ANNHeuristicBenchmarkLarge.ipynb  ANNHeuristicBenchmarkPDB8.ipynb  ANNHeuristicBenchmarkPDB8MoreData.ipynb  ANNHeuristicMistakes.ipynb  AsymmetricCostFunction.ipynb  Bootstrapping.ipynb  HeuristicQueryDistribution.ipynb  Keras.ipynb  KerasTrainingLargeDataset.ipynb  LargeDatasetUtils.ipynb  RandomBoardsDistributions.ipynb  RandomForestTraining.ipynb  ThesisFigures.ipynb  TorchTest.ipynb  TorchTrainingMinimal.ipynb  WeightedAStarBenchmark.ipynb
prototype/prototype/: algorithm.py  board.py  constants.py  custom_queue.py  exceptions.py  heuristic.py  metric.py  path.py  utils.py
solver/src/: Board.cpp  Board.h  CMakeLists.txt  Config.h  Utils.cpp
src/: Board.cpp  Board.h  CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
src/StateSpaceSearch/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Dataset.cpp  Dataset.h  Node.cpp  Node.h
src/StateSpaceSearch/Algorithms/: IDAStar.cpp  IDAStar.h
src/StateSpaceSearch/Heuristics/: CMakeLists.txt  Heuristic.h  ManhattanDistance.cpp  ManhattanDistance.h  PatternDatabase.cpp  PatternDatabase.h
utils/datasets/: 15_costs_preprocessing.py
(+96 files in other folders)
